Changed the margins and padding to be more responsive

--- a/styles/checkout-styles.css
+++ b/styles/checkout-styles.css
@@ -34,7 +34,7 @@ legend {
 }
 
 .address {
-  margin-right: 20px;
+  margin-right: 5%;
 }
 
 fieldset {
@@ -71,7 +71,7 @@ h3 {
   height: 80px;
   width: 50%;
   min-width: 40px;
-  margin-right: 20px;
+  margin-right: 5%;
 }
 
 .dog-cost {
