--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,8 @@ body {
 header {
   background-image: url("../images/header-image.jpg");
   background-size: cover;
-  padding: 40px 85px 120px 85px;
+  /* padding: 40px 85px 120px 85px; */
+  padding: 2em 5em 7em 5em;
   display: flex;
   justify-content: space-between;
 }
@@ -31,7 +32,8 @@ header {
   /* display: inline-block; */
   height: 50px;
   width: 30%;
-  padding-right: 5px;
+  /* padding-right: 5px; */
+  padding-right: 0.5em;
 }
 
 .checkout p {
@@ -49,7 +51,8 @@ form .button {
 }
 
 .checkout .button p {
-  padding: 5px;
+  /* padding: 5px; */
+  padding: 0.5em;
   margin: 0;
 }
 
@@ -60,8 +63,8 @@ form .button {
 
 nav {
   background-color: #eee;
-  padding: 20px;
-  padding-left: 150px;
+  padding: 1.2em;
+  padding-left: 8em;
 }
 
 a,
@@ -74,7 +77,7 @@ nav a:visited,
 nav span,
 .more-dogs-btn {
   font-weight: 900;
-  padding: 3px;
+  padding: 0.2em;
   font-family: sans-serif;
 }
 
@@ -90,14 +93,15 @@ legend {
 }
 
 main {
-  /* margin: 40px 100px 100px 100px; */
-  margin-left: 150px;
-  margin-right: 150px;
+  /* margin-left: 150px;
+  margin-right: 150px; */
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .adopt-a-dog {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 2em;
+  padding-bottom: 2em;
   display: flex;
   /* justify-content: space-between; */
   flex-flow: row wrap;
@@ -106,7 +110,7 @@ main {
 .adopt-a-dog img {
   height: 280px;
   min-width: 20%;
-  padding-right: 40px;
+  padding-right: 2em;
 }
 
 .adopt-a-dog h1 {
@@ -122,7 +126,8 @@ main {
 }
 
 .dogs {
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
+  margin-bottom: 4%;
 }
 
 .dogs section {
@@ -135,12 +140,11 @@ main {
   width: 20%;
   min-width: 120px;
   border: 1px solid silver;
-  /* padding: 10px; */
 }
 
 .dog-info {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 0.6em;
+  padding-right: 0.6em;
 }
 
 .dog-card img {
@@ -158,11 +162,12 @@ main {
 }
 
 .dog-card .button {
-  margin: 15px 30px 15px 30px;
+  margin: 7% 15%; 
 }
 
 .dog-card .button p {
-  padding: 10px;
+  /* padding: 10px; */
+  padding: 0.8em;
 }
 
 .more-dogs-btn {
@@ -170,12 +175,15 @@ main {
   background-color: #E5E4E2;
   margin: auto;
   text-align: center;
+  min-width: 100px;
 }
 
 footer {
   background-color: #1b447f;
-  padding: 30px 400px 30px 400px;
-  margin-top: 70px;
+  /* margin-top: 70px; */
+  padding-top: 2em;
+  padding-bottom: 2em;
+  margin-top: 5%;
   color: white;
   text-align: center;
 
