--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,12 +42,14 @@ header {
 
 .checkout .button,
 .dog-card .button,
+.dog-card-index .button,
 form .button {
   background-color: #12AD2B;
   color: white;
   font-weight: bold;
   text-align: center;
   font-family: sans-serif;
+  cursor: pointer;
 }
 
 .checkout .button p {
@@ -57,7 +59,8 @@ form .button {
 }
 
 .checkout .button p,
-.dog-card .button p {
+.dog-card .button p,
+.dog-card-index .button p {
   font-size: 0.8rem;
 }
 
@@ -99,18 +102,40 @@ main {
   margin-right: 10%;
 }
 
+.blog-preview {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .dogs-preview {
+    width: 62%;
+    margin: 0;
+    float: left;
+    padding-right: 2em;
+  }
+
+  .blog-preview {
+    display: block;
+    width: 33%;
+    margin: 0;
+    float: right;
+  }
+}
+
 .adopt-a-dog {
   padding-top: 2em;
   padding-bottom: 2em;
+  /* padding: 2em; */
   display: flex;
   /* justify-content: space-between; */
   flex-flow: row wrap;
 }
 
 .adopt-a-dog img {
-  height: 280px;
+  height: 350px;
   min-width: 20%;
-  padding-right: 2em;
+  width: 100%;
+  /* padding-right: 2em; */
 }
 
 .adopt-a-dog h1 {
@@ -122,11 +147,10 @@ main {
 }
 
 .adopt-a-dog section {
-  width: 50%;
+  width: 100%;
 }
 
 .dogs {
-  /* margin-bottom: 40px; */
   margin-bottom: 4%;
 }
 
@@ -136,10 +160,34 @@ main {
  justify-content: space-between;
 }
 
+.dog-card-index {
+  width: 30%;
+  margin: 5px;
+  min-width: 120px;
+  border: 1px solid silver;
+}
+
+@media screen and (max-width: 576px) {
+  .dog-card-index {
+    width: 100%;
+    margin: 10px;
+  }
+}
+
+@media screen and (max-width: 768px) and (min-width: 576px) {
+  .dog-card-index {
+    width: 45%;
+  }
+}
+
 .dog-card {
   width: 20%;
   min-width: 120px;
   border: 1px solid silver;
+}
+
+.cost {
+  font-weight: bold;
 }
 
 .dog-info {
@@ -147,35 +195,50 @@ main {
   padding-right: 0.6em;
 }
 
-.dog-card img {
-  height: 110px;
+.dog-card img,
+.dog-card-index img {
+  height: 120px;
   width: 100%;
   min-width: 30px;
 }
 
-.dog-card h2 {
+.dog-card h2,
+.dog-card-index h2 {
   font-size: 1.2rem;
 }
 
-.dog-card p {
+.dog-card p,
+.dog-card-index p {
   font-size: 1rem;
 }
 
-.dog-card .button {
+.dog-card .button,
+.dog-card-index .button {
   margin: 7% 15%; 
 }
 
-.dog-card .button p {
+.dog-card .button p,
+.dog-card-index .button p {
   /* padding: 10px; */
   padding: 0.8em;
 }
 
 .more-dogs-btn {
-  width: 20%;
+  width: 30%;
   background-color: #E5E4E2;
   margin: auto;
   text-align: center;
   min-width: 100px;
+  margin-bottom: 1.5em;
+}
+
+.blog-preview img {
+  height: 230px;
+  width: 100%;
+} 
+
+.blog-preview section {
+  margin-bottom: 15%;
 }
 
 footer {
@@ -186,6 +249,7 @@ footer {
   margin-top: 5%;
   color: white;
   text-align: center;
+  clear: both;
 
 }
 
