--- a/styles/blog-styles.css
+++ b/styles/blog-styles.css
@@ -1,22 +1,31 @@
 .blog {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   margin-top: 30px;
   margin-bottom: 30px;
 }
 
 .blog img {
   height: 230px;
-  /* margin-bottom: 60px; */
 }
 
 section {
-  width: 68%;
+  /* width: 68%; */
+  margin-left: 20px;
 }
 
 section h2 {
   margin-top: 0;
+}
+
+@media screen and (max-width: 576px) {
+  .blog {
+    flex-wrap: wrap;
+  }
+  section {
+    margin-left: 0;
+  }
 }
 
 footer {
