--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,9 +3,10 @@ body {
 }
 
 header {
+  background: linear-gradient(to right, black, brown);
   background-image: url("../images/header-image.jpg");
   background-size: cover;
-  /* padding: 40px 85px 120px 85px; */
+  background-repeat: no-repeat;
   padding: 2em 5em 7em 5em;
   display: flex;
   justify-content: space-between;
@@ -70,6 +71,12 @@ nav {
   padding-left: 8em;
 }
 
+@media screen and (max-width: 576px) {
+  nav {
+    padding-left: 1.2em;
+  }
+}
+
 a,
 a:visited {
   text-decoration: none;
@@ -106,6 +113,10 @@ main {
   display: none;
 }
 
+.blog-preview a {
+  color: #123456;
+}
+
 @media screen and (min-width: 768px) {
   .dogs-preview {
     width: 62%;
@@ -132,10 +143,8 @@ main {
 }
 
 .adopt-a-dog img {
-  height: 350px;
-  min-width: 20%;
-  width: 100%;
-  /* padding-right: 2em; */
+  height: auto;
+  max-width: 100%;
 }
 
 .adopt-a-dog h1 {
@@ -186,7 +195,8 @@ main {
   border: 1px solid silver;
 }
 
-.cost {
+.cost,
+.blog-preview a {
   font-weight: bold;
 }
 
@@ -197,7 +207,8 @@ main {
 
 .dog-card img,
 .dog-card-index img {
-  height: 120px;
+  /* height: 120px; */
+  height: auto;
   width: 100%;
   min-width: 30px;
 }
@@ -233,7 +244,8 @@ main {
 }
 
 .blog-preview img {
-  height: 230px;
+  /* height: 230px; */
+  height: auto;
   width: 100%;
 } 
 
