--- a/styles/styles.css
+++ b/styles/styles.css
@@ -177,20 +177,28 @@ main {
 }
 
 @media screen and (max-width: 576px) {
-  .dog-card-index {
+  .dog-card-index,
+  .dog-card {
     width: 100%;
     margin: 10px;
   }
 }
 
 @media screen and (max-width: 768px) and (min-width: 576px) {
-  .dog-card-index {
+  .dog-card-index,
+  .dog-card {
     width: 45%;
   }
 }
 
+@media screen and (min-width: 768px) {
+  .dog-card {
+    width: 20%;
+  }
+}
+
 .dog-card {
-  width: 20%;
+  /* width: 20%; */
   min-width: 120px;
   border: 1px solid silver;
 }
@@ -256,8 +264,7 @@ main {
 footer {
   background-color: #1b447f;
   /* margin-top: 70px; */
-  padding-top: 2em;
-  padding-bottom: 2em;
+  padding: 2em;
   margin-top: 5%;
   color: white;
   text-align: center;
@@ -273,7 +280,7 @@ footer img {
 footer nav {
   background-color: #1b447f;
   font-size: 1rem;
-  padding-left: 0;
+  /* padding-left: 0; */
 }
 
 footer nav span,
